--- a/observability/loki-config.yaml
+++ b/observability/loki-config.yaml
@@ -5,10 +5,10 @@ server:
   http_listen_port: 3100
 
 common:
-  path_prefix: /loki  # ИЗМЕНИТЕ!
+  path_prefix: /loki
   storage:
     filesystem:
-      chunks_directory: /loki/chunks  # ИЗМЕНИТЕ!
+      chunks_directory: /loki/chunks
   ring:
     kvstore:
       store: inmemory
@@ -25,28 +25,27 @@ schema_config:
 
 storage_config:
   boltdb_shipper:
-    active_index_directory: /loki/index  # ИЗМЕНИТЕ!
-    cache_location: /loki/boltdb-shipper-cache  # ИЗМЕНИТЕ!
+    active_index_directory: /loki/index
+    cache_location: /loki/boltdb-shipper-cache
     shared_store: filesystem
   filesystem:
-    directory: /loki/chunks  # ИЗМЕНИТЕ!
+    directory: /loki/chunks
 
 compactor:
-  working_directory: /loki/compactor  # ИЗМЕНИТЕ!
+  working_directory: /loki/compactor
   shared_store: filesystem
 
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
 
-# ДОБАВЬТЕ ЭТУ СЕКЦИЮ ДЛЯ RULER!
 ruler:
   storage:
     type: local
     local:
-      directory: /loki/rules  # или /loki/rules_storage
+      directory: /loki/rules
   rule_path: /loki/rules-temp
-  alertmanager_url: http://localhost:9093  # если не используете Alertmanager, можно оставить
+  alertmanager_url: http://localhost:9093
 
 chunk_store_config:
   max_look_back_period: 0s
