--- a/observability/prometheus.yaml
+++ b/observability/prometheus.yaml
@@ -6,6 +6,10 @@ scrape_configs:
     static_configs:
       - targets: ["prometheus:9090"]
 
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: [ 'node-exporter:9100' ]
+
   - job_name: "go-service"
     static_configs:
       - targets: ["host.docker.internal:8080"]
@@ -21,7 +25,3 @@ scrape_configs:
   - job_name: "loki"
     static_configs:
       - targets: [ "loki:3100" ]
-
-  - job_name: "promtail"
-    static_configs:
-      - targets: [ "promtail:9080" ]
